force-app/main/default/objects/Object_DML_Log__c/Object_DML_Log__c.object-meta.xml
<CustomObject>
    <label>Object DML Log</label>
    <nameField>
        <label>Object DML Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object DML Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>