force-app/main/default/objects/Object_DML_Log__c/fields/Changed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Changed_Fields__c</fullName>
    <label>Changed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>