force-app/main/default/objects/Object_DML_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>