force-app/main/default/objects/Object_DML_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Performed_By__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Changed_Fields__c</columns>
    <columns>Operation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>