force-app/main/default/objects/Object_DML_Log__c/listViews/TODAYS_LOGS.listView-meta.xml
<ListView>
    <fullName>TODAYS_LOGS</fullName>
    <columns>NAME</columns>
    <columns>Record_Id__c</columns>
    <columns>Performed_By__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Changed_Fields__c</columns>
    <columns>Operation__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAYS LOGS</label>
</ListView>